kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iass
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iass
  template:
    metadata:
      labels:
        app: iass
    spec:
      containers:
        - name: app
          image: "gitlab-registry.maruru.me/ilts/iass:1.0.4-app"
          volumeMounts:
            - mountPath: "/mnt/persistent-volume"
              name: data
        - name: web
          image: "gitlab-registry.maruru.me/ilts/iass:1.0.3-web"
          ports:
          - containerPort: 80
          - containerPort: 81
      imagePullSecrets:
        - name: gitlab-deploy-token
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pvc-data
            readOnly: false
